completed add book to list function

--- a/angular/src/app/components/browse/browse.component.html
+++ b/angular/src/app/components/browse/browse.component.html
@@ -11,7 +11,7 @@
                         <li>Author: {{tempBook.author}}</li>
                         <li>Descrpition: <p class="description">{{tempBook.description}}</p></li>
                     </ul>
-                    <button class="btn btn-primary">add</button>
+                    <button class="btn btn-primary" (click)="addToList(tempBook)">add</button>
                 </div>
             </div>
         </div>
