fix radio form check rendering issue

--- a/angular/src/app/components/shelves/bookshelf/bookshelf.component.html
+++ b/angular/src/app/components/shelves/bookshelf/bookshelf.component.html
@@ -297,22 +297,22 @@
                     <div class="form-group row">
                         <label for="status" class="col-sm-2 col-form-label">Status</label>
                         <div class="col-sm-10 row">
-                            <div class="form-check form-check-inline form-check-success ">
+                            <div class="col-sm-3">
                                 <label class="form-check-label">
                                     <input type="radio" value="FINISHED" formControlName="status">FINISHED
                                 </label>
                             </div>
-                            <div class="form-check form-check-inline form-check-warning">
+                            <div class="col-sm-3">
                                 <label class="form-check-label">
                                     <input type="radio" value="IN_PROGRESS" formControlName="status">IN_PROGRESS
                                 </label>
                             </div>
-                            <div class="form-check form-check-inline form-check-dark">
+                            <div class="col-sm-3">
                                 <label class="form-check-label">
                                     <input type="radio" value="DNF" formControlName="status">DNF
                                 </label>
                             </div>
-                            <div class="form-check form-check-inline form-check-secondary">
+                            <div class="fcol-sm-3">
                                 <label class="form-check-label">
                                     <input type="radio" value="LISTING" formControlName="status">LISTING
                                 </label>
@@ -340,7 +340,7 @@
 <!-- end of Modal edit BookshelfItem  -->
 
 
-<!-- Modal edit BookshelfItem -->
+<!-- Modal edit Listing item -->
 <div class="modal fade" id="editListingBook" tabindex="-1" role="dialog" aria-labelledby="editListingBookLabel"
     aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
@@ -362,24 +362,24 @@
                     <div class="form-group row">
                         <label for="status" class="col-sm-2 col-form-label">Status</label>
                         <div class="col-sm-10 row">
-                            <div class="form-check form-check-inline form-check-success ">
-                                <label class="form-check-label">
+                            <div class="col-sm-3">
+                                <label class="">
                                     <input type="radio" value="FINISHED" formControlName="status">FINISHED
                                 </label>
                             </div>
-                            <div class="form-check form-check-inline form-check-warning">
-                                <label class="form-check-label">
+                            <div class="col-sm-3">
+                                <label class="">
                                     <input type="radio" value="IN_PROGRESS" formControlName="status">IN_PROGRESS
                                 </label>
                             </div>
-                            <div class="form-check form-check-inline form-check-dark">
-                                <label class="form-check-label">
-                                    <input type="radio" value="DNF" formControlName="status">DNF
+                            <div class="col-sm-3">
+                                <label class="">
+                                    <input  type="radio" value="DNF" formControlName="status">DNF
                                 </label>
                             </div>
-                            <div class="form-check form-check-inline form-check-secondary">
-                                <label class="form-check-label">
-                                    <input type="radio" value="LISTING" formControlName="status">LISTING
+                            <div class="col-sm-3">
+                                <label class="">
+                                    <input  type="radio" value="LISTING" formControlName="status">LISTING
                                 </label>
                             </div>
                         </div>
@@ -402,4 +402,4 @@
         </div>
     </div>
 </div>
-<!-- end of Modal edit BookshelfItem  -->
+<!-- end of Modal edit Listing item -->
