--- a/angular/src/app/components/shelves/bookshelf/bookshelf.component.css
+++ b/angular/src/app/components/shelves/bookshelf/bookshelf.component.css
@@ -32,7 +32,7 @@ table {
     padding: 24px 10px;
   }
 
-  .img-container img{
+  .img-container .img-thumbnail{
     max-height:100%;
     width : 100%;    
   }
