--- a/angular/src/app/components/shelves/bookshelf/bookshelf.component.html
+++ b/angular/src/app/components/shelves/bookshelf/bookshelf.component.html
@@ -389,11 +389,14 @@
                     </div>
                 </div>
 
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" data-dismiss="modal"
+                <div class="modal-footer justify-content-between">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="deleteListingItem()">Delete</button>
+                <div>
+                    <button type="button" class="btn btn-secondary ml-3" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary ml-3" data-dismiss="modal"
                         (click)="updateBookshelfItem()">Update</button>
                 </div>
+            </div>
             </form>
         </div>
     </div>
