added tv series front end components

--- a/angular/src/app/components/sidebar/sidebar.component.html
+++ b/angular/src/app/components/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
         <ul class="nav flex-column sub-menu">
           <li class="nav-item"> <a class="nav-link" routerLink="browse/books" routerLinkActive="active">new Books</a></li>
           <li class="nav-item"> <a class="nav-link" routerLink="browse/movies" routerLinkActive="active">new Movies</a></li>
-          <li class="nav-item"> <a class="nav-link" routerLink="browse/tvs" routerLinkActive="active">new TV Series</a></li>
+          <li class="nav-item"> <a class="nav-link" routerLink="browse/tvseries" routerLinkActive="active">new TV Series</a></li>
           <li class="nav-item"> <a class="nav-link" routerLink="browse/games" routerLinkActive="active">new Game</a></li>
         </ul>
       </div>
