--- a/angular/src/app/components/shelves/tvshelf/tvshelf.component.html
+++ b/angular/src/app/components/shelves/tvshelf/tvshelf.component.html
@@ -6,7 +6,7 @@
 
                     <div *ngIf="tvshelfName; else createTvshelf">
                         <diV class="card-title">
-                            <h4>Tvs in {{tvshelfName}}</h4>
+                            <h4>TV Series in {{tvshelfName}}</h4>
                         </diV>
                         
                            
