--- a/angular/src/app/components/sidebar/sidebar.component.html
+++ b/angular/src/app/components/sidebar/sidebar.component.html
@@ -18,14 +18,14 @@
     </li>
 
     <li class="nav-item" routerLinkActive="active">
-      <a class="nav-link" routerLink="dashboard">
+      <a class="nav-link" routerLink="shelf/dashboard">
         <i class="mdi mdi-home menu-icon"></i>
         <span class="menu-title">Dashboard</span>
       </a>
     </li>
 
     <li class="nav-item" routerLinkActive="active">
-      <a class="nav-link d-flex justify-content-between flex-wrap" routerLink="bookshelf">
+      <a class="nav-link d-flex justify-content-between flex-wrap" routerLink="shelf/bookshelf">
         <div>
           <i class="mdi mdi-book-open-page-variant menu-icon"></i>
           <span class="menu-title">Books</span>
@@ -35,7 +35,7 @@
     </li>
 
     <li class="nav-item" routerLinkActive="active">
-      <a class="nav-link d-flex justify-content-between flex-wrap" routerLink="movieshelf">
+      <a class="nav-link d-flex justify-content-between flex-wrap" routerLink="shelf/movieshelf">
         <div>
           <i class="mdi mdi-movie menu-icon"></i>
           <span class="menu-title">Movies</span>
@@ -45,7 +45,7 @@
     </li>
 
     <li class="nav-item" routerLinkActive="active">
-      <a class="nav-link d-flex justify-content-between flex-wrap" routerLink="tvshelf">
+      <a class="nav-link d-flex justify-content-between flex-wrap" routerLink="shelf/tvshelf">
         <div>
           <i class="mdi mdi-television menu-icon"></i>
           <span class="menu-title">TV Series</span>
@@ -55,7 +55,7 @@
     </li>
 
     <li class="nav-item" routerLinkActive="active">
-      <a class="nav-link d-flex justify-content-between flex-wrap" routerLink="gameshelf">
+      <a class="nav-link d-flex justify-content-between flex-wrap" routerLink="shelf/gameshelf">
         <div>
           <i class="mdi mdi-gamepad-variant menu-icon"></i>
           <span class="menu-title">Games</span>
