added different look of admin

--- a/angular/src/app/components/nav-bar/profile/profile.component.html
+++ b/angular/src/app/components/nav-bar/profile/profile.component.html
@@ -20,6 +20,10 @@
                   <td>{{currentUser.email}}&nbsp;&nbsp;&nbsp;&nbsp;<button class="btn btn-inverse-primary btn-fw">Change
                       email</button></td>
                 </tr>
+                <tr>
+                  <td>Role</td>
+                  <td>{{currentUser.roles[0]}}</td>
+                </tr>
               </tbody>
             </table>
           </div>
