--- a/angular/src/app/components/sidebar/sidebar.component.html
+++ b/angular/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <nav class="sidebar sidebar-offcanvas" id="sidebar">
-  <ul class="nav">
+  <ul class="nav" *ngIf="isLoggedin">
 
-    <li class="nav-item" >
+    <li class="nav-item">
       <a class="nav-link" data-toggle="collapse" href="#browse-item" aria-expanded="false" aria-controls="browse-item">
         <i class="mdi mdi-compass-outline menu-icon"></i>
         <span class="menu-title">Browse</span>
@@ -9,60 +9,66 @@
       </a>
       <div class="collapse" id="browse-item">
         <ul class="nav flex-column sub-menu">
-          <li class="nav-item"> <a class="nav-link" routerLink="browse/books" routerLinkActive="active">new Books</a></li>
-          <li class="nav-item"> <a class="nav-link" routerLink="browse/movies" routerLinkActive="active">new Movies</a></li>
-          <li class="nav-item"> <a class="nav-link" routerLink="browse/tvseries" routerLinkActive="active">new TV Series</a></li>
-          <li class="nav-item"> <a class="nav-link" routerLink="browse/games" routerLinkActive="active">new Game</a></li>
+          <li class="nav-item"> <a class="nav-link" routerLink="browse/books" routerLinkActive="active">new Books</a>
+          </li>
+          <li class="nav-item"> <a class="nav-link" routerLink="browse/movies" routerLinkActive="active">new Movies</a>
+          </li>
+          <li class="nav-item"> <a class="nav-link" routerLink="browse/tvseries" routerLinkActive="active">new TV
+              Series</a></li>
+          <li class="nav-item"> <a class="nav-link" routerLink="browse/games" routerLinkActive="active">new Game</a>
+          </li>
         </ul>
       </div>
     </li>
+    <div *ngIf="!isAdmin">
 
-    <li class="nav-item" routerLinkActive="active">
-      <a class="nav-link" routerLink="shelf/dashboard">
-        <i class="mdi mdi-home menu-icon"></i>
-        <span class="menu-title">Dashboard</span>
-      </a>
-    </li>
+      <!-- <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="shelf/dashboard">
+          <i class="mdi mdi-home menu-icon"></i>
+          <span class="menu-title">Dashboard</span>
+        </a>
+      </li> -->
 
-    <li class="nav-item" routerLinkActive="active">
-      <a class="nav-link d-flex justify-content-between flex-wrap" routerLink="shelf/bookshelf">
-        <div>
-          <i class="mdi mdi-book-open-page-variant menu-icon"></i>
-          <span class="menu-title">Books</span>
-        </div>
-        <span class="badge badge-pill badge-secondary">{{bookshlefItemListSize}}</span>
-      </a>
-    </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link d-flex justify-content-between flex-wrap" routerLink="shelf/bookshelf">
+          <div>
+            <i class="mdi mdi-book-open-page-variant menu-icon"></i>
+            <span class="menu-title">Books</span>
+          </div>
+          <span class="badge badge-pill badge-secondary">{{bookshlefItemListSize}}</span>
+        </a>
+      </li>
 
-    <li class="nav-item" routerLinkActive="active">
-      <a class="nav-link d-flex justify-content-between flex-wrap" routerLink="shelf/movieshelf">
-        <div>
-          <i class="mdi mdi-movie menu-icon"></i>
-          <span class="menu-title">Movies</span>
-        </div>
-        <span class="badge badge-pill badge-secondary">{{movieshelfItemListSize}}</span>
-      </a>
-    </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link d-flex justify-content-between flex-wrap" routerLink="shelf/movieshelf">
+          <div>
+            <i class="mdi mdi-movie menu-icon"></i>
+            <span class="menu-title">Movies</span>
+          </div>
+          <span class="badge badge-pill badge-secondary">{{movieshelfItemListSize}}</span>
+        </a>
+      </li>
 
-    <li class="nav-item" routerLinkActive="active">
-      <a class="nav-link d-flex justify-content-between flex-wrap" routerLink="shelf/tvshelf">
-        <div>
-          <i class="mdi mdi-television menu-icon"></i>
-          <span class="menu-title">TV Series</span>
-        </div>
-        <span class="badge badge-pill badge-secondary">{{tvshelfItemListSize}}</span>
-      </a>
-    </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link d-flex justify-content-between flex-wrap" routerLink="shelf/tvshelf">
+          <div>
+            <i class="mdi mdi-television menu-icon"></i>
+            <span class="menu-title">TV Series</span>
+          </div>
+          <span class="badge badge-pill badge-secondary">{{tvshelfItemListSize}}</span>
+        </a>
+      </li>
 
-    <li class="nav-item" routerLinkActive="active">
-      <a class="nav-link d-flex justify-content-between flex-wrap" routerLink="shelf/gameshelf">
-        <div>
-          <i class="mdi mdi-gamepad-variant menu-icon"></i>
-          <span class="menu-title">Games</span>
-        </div>
-        <span class="badge badge-pill badge-secondary">{{gameshelfItemListSize}}</span>
-      </a>
-    </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link d-flex justify-content-between flex-wrap" routerLink="shelf/gameshelf">
+          <div>
+            <i class="mdi mdi-gamepad-variant menu-icon"></i>
+            <span class="menu-title">Games</span>
+          </div>
+          <span class="badge badge-pill badge-secondary">{{gameshelfItemListSize}}</span>
+        </a>
+      </li>
+    </div>
 
   </ul>
 </nav>
