--- a/angular/src/app/components/browse/new-book/new-book.component.html
+++ b/angular/src/app/components/browse/new-book/new-book.component.html
@@ -5,22 +5,78 @@
                 <div class="card-body">
                     <h5 class="text-dark">{{tempBook.title}}</h5>
                     <div class="text-center"><img class="img-thumbnail" src="{{tempBook.imageUrl}}"></div>
-                    
+
                     <ul class="card-description">
                         <li>published: {{tempBook.published}}</li>
                         <li>Author: {{tempBook.author}}</li>
-                        <li>Descrpition: <p class="description">{{tempBook.description}}</p></li>
+                        <li>Descrpition: <p class="description">{{tempBook.description}}</p>
+                        </li>
                     </ul>
-                    <button class="btn btn-primary" (click)="addToList(tempBook)">add</button>
+                    <button *ngIf="!isAdmin" class="btn btn-primary" (click)="addToList(tempBook)">add</button>
+                    <button *ngIf="isAdmin" class="btn btn-primary" data-toggle="modal" data-target="#editBook" (click)="openEditBookModal(tempBook)">edit</button>
                 </div>
             </div>
         </div>
     </div>
     <div class="footer-pagination">
-        <ngb-pagination [(page)] = "pageNumber"
-                        [pageSize] = "pageSize"
-                        [collectionSize] = "totalElements"
-                        (pageChange) = "listItems()">
+        <ngb-pagination [(page)]="pageNumber" [pageSize]="pageSize" [collectionSize]="totalElements"
+            (pageChange)="listItems()">
         </ngb-pagination>
     </div>
 </div>
+
+
+<!-- Modal edit Book -->
+<div class="modal fade" id="editBook" tabindex="-1" role="dialog" aria-labelledby="editBookLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <!-- <div class="modal-header">
+                <h5 class="modal-title" id="editBookLabel">{{bookForm.controls.title}}</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div> -->
+            <form [formGroup]="bookForm">
+                <div class="modal-body">
+
+                    <div class="form-group row">
+                        <label for="title" class="col-sm-2 col-form-label">Title</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" formControlName="title">
+                        </div>
+                    </div>
+                  
+
+                    <div class="form-group row">
+                        <label for="author" class="col-sm-2 col-form-label">Author</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" formControlName="author">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="published " class="col-sm-2 col-form-label">published</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" formControlName="published">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="description" class="col-sm-2 col-form-label">Description</label>
+                        <div class="col-sm-10">
+                            <textarea class="form-control" rows="12" formControlName="description"></textarea>
+                        </div>
+                    </div>
+                
+                </div> 
+
+                 <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="updateBook()">Save</button>
+                </div> 
+            </form>
+        </div>
+    </div>
+</div>
+<!-- end of Modal edit BookshelfItem  -->
