--- a/angular/src/app/components/browse/new-movie/new-movie.component.html
+++ b/angular/src/app/components/browse/new-movie/new-movie.component.html
@@ -9,9 +9,11 @@
                     <ul class="card-description">
                         <li>Year: {{tempMovie.year}}</li>
                         <li>Director: {{tempMovie.director}}</li>
+                        <li>Cast: {{tempMovie.cast}}</li>
                         <li>Descrpition: <p class="description">{{tempMovie.description}}</p></li>
                     </ul>
-                    <button class="btn btn-primary" (click)="addToList(tempMovie)">add</button>
+                    <button *ngIf="!isAdmin" class="btn btn-primary" (click)="addToList(tempMovie)">add</button>
+                    <button *ngIf="isAdmin" class="btn btn-primary" data-toggle="modal" data-target="#editMovie" (click)="openEditMovieModal(tempMovie)">edit</button>
                 </div>
             </div>
         </div>
@@ -24,3 +26,66 @@
         </ngb-pagination>
     </div>
 </div>
+
+
+<!-- Modal edit Movie -->
+<div class="modal fade" id="editMovie" tabindex="-1" role="dialog" aria-labelledby="editMovieLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="editMovieLabel">Edit</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <form [formGroup]="movieForm">
+                <div class="modal-body">
+
+                    <div class="form-group row">
+                        <label for="title" class="col-sm-2 col-form-label">Title</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" formControlName="title">
+                        </div>
+                    </div>
+                  
+
+                    <div class="form-group row">
+                        <label for="director" class="col-sm-2 col-form-label">Director</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" formControlName="director">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="cast" class="col-sm-2 col-form-label">Cast</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" formControlName="cast">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="year " class="col-sm-2 col-form-label">Year</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" formControlName="year">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="description" class="col-sm-2 col-form-label">Description</label>
+                        <div class="col-sm-10">
+                            <textarea class="form-control" rows="12" formControlName="description"></textarea>
+                        </div>
+                    </div>
+                
+                </div> 
+
+                 <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="updateMovie()">Save</button>
+                </div> 
+            </form>
+        </div>
+    </div>
+</div>
+<!-- end of Modal edit MovieshelfItem  -->
