--- a/angular/src/app/components/browse/new-tv-series/new-tv-series.component.html
+++ b/angular/src/app/components/browse/new-tv-series/new-tv-series.component.html
@@ -11,7 +11,8 @@
                         <li>Year: {{tempTvSeries.year}}</li>
                         <li>Descrpition: <p class="description">{{tempTvSeries.description}}</p></li>
                     </ul>
-                    <button class="btn btn-primary" (click)="addToList(tempTvSeries)">add</button>
+                    <button *ngIf="!isAdmin" class="btn btn-primary" (click)="addToList(tempTvSeries)">add</button>
+                    <button *ngIf="isAdmin" class="btn btn-primary" data-toggle="modal" data-target="#editTvSeries" (click)="openEditTvSeriesModal(tempTvSeries)">edit</button>
                 </div>
             </div>
         </div>
@@ -24,3 +25,51 @@
         </ngb-pagination>
     </div>
 </div>
+
+
+<!-- Modal edit TvSeries -->
+<div class="modal fade" id="editTvSeries" tabindex="-1" role="dialog" aria-labelledby="editTvSeriesLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="editTvSeriesLabel">Edit</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <form [formGroup]="tvSeriesForm">
+                <div class="modal-body">
+
+                    <div class="form-group row">
+                        <label for="title" class="col-sm-2 col-form-label">Title</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" formControlName="title">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="year " class="col-sm-2 col-form-label">Year</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" formControlName="year">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="description" class="col-sm-2 col-form-label">Description</label>
+                        <div class="col-sm-10">
+                            <textarea class="form-control" rows="12" formControlName="description"></textarea>
+                        </div>
+                    </div>
+                
+                </div> 
+
+                 <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="updateTvSeries()">Save</button>
+                </div> 
+            </form>
+        </div>
+    </div>
+</div>
+<!-- end of Modal edit TvSeries -->
